--- a/thesis/Intro/preamble.tex
+++ b/thesis/Intro/preamble.tex
@@ -27,6 +27,7 @@
 
 %\usepackage{algpseudocode}
 \usepackage{listings}
+\usepackage{dirtree}
 
 % ********************Captions and Hyperreferencing / URL **********************
 
@@ -70,6 +71,7 @@
 \usepackage{amssymb}
 \usepackage{siunitx} % use this package module for SI units
 \usepackage[euler]{textgreek}
+%\usepackage{refcheck}
 
 % ******************************* Line Spacing *********************************
 
