--- a/thesis/P1-Introduction/introduction.tex
+++ b/thesis/P1-Introduction/introduction.tex
@@ -2,7 +2,7 @@
 This introduction contains the project goals and some very short introductions on the FPGAs and how they are used, numerical methods for approximating ODEs, functional programming and \clash{}. The goal of this report is to be understandable for any technical BSc student which is not necessarily familiar with functional programming, or numerical mathematics and therefore the short introductions are included for the sake of completeness and are assumed knowledge for the rest of the thesis. 
 
 \section{Project goals}
-From the start, this project has had two main goals: firstly, obtaining information on the feasibility and the advantages and disadvantages of performing numerical mathematics (specifically, solving ODEs \footnote{In this thesis, the term 'solving' will be used for both the process of solving an ODE analytically and for computing a numerical approximation to an ODE.}) directly on (programmable) hardware, the FPGA. Secondly: figuring out whether higher-order functions are of much use for numerical mathematics. As per usual, having main goals spawns off several minor goals which support the main parts. Both supporting goals are about simplifying the process of configuring FPGAs: an easy way of setting up projects with complicated IO requirements and furthermore, developing a toolchain integration which turns the long process of compiling and deploying your FPGA project into the execution of a single command.
+From the start, this project has one main goal: obtaining information on the feasibility and the advantages and disadvantages of performing numerical mathematics (specifically, solving ODEs \footnote{In this thesis, the term 'solving' will be used for both the process of solving an ODE analytically and for computing a numerical approximation to an ODE.}) directly on (programmable) hardware, the FPGA. As per usual, having a main goal spawns off several minor goals which support the main part. Both supporting goals are about simplifying the process of configuring FPGAs: an easy way of setting up projects with complicated IO requirements and furthermore, developing a toolchain integration which turns the long process of compiling and deploying your FPGA project into the execution of a single command.
 
 Alongside these concrete goals the underlying theme is to do as much work as possible in \clash{}, a library and compiler based on the functional programming language Haskell, developed by Christiaan Baaij at the CAES group at the University of Twente. Further elaboration on \clash{} can be found in section \ref{s:clash}.
 
