--- a/thesis/References/references.bib
+++ b/thesis/References/references.bib
@@ -90,6 +90,18 @@
 	year = {2015}, 
 	note = "[Accessed: June 2015]"
 }
+@misc{AlteraCycloneV,
+	title = {Cyclone V FPGAs \& SoCs},
+	howpublished = "\url{https://www.altera.com/products/fpga/cyclone-series/cyclone-v/overview.html}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
+@misc{Inteli7,
+	title = {Intel® Core™ i7-950 Processor (8M Cache, 3.06 GHz, 4.80 GT/s Intel® QPI)},
+	howpublished = "\url{http://ark.intel.com/products/37150/Intel-Core-i7-950-Processor-8M-Cache-3_06-GHz-4_80-GTs-Intel-QPI}",
+	year = {2009}, 
+	note = "[Accessed: June 2015]"
+}
 
 % ------------------------------------------------------------------------
 % SAMPLE BIBLIOGRAPHY FILE
