--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -144,9 +144,8 @@
 \include{P1-Introduction/introduction}
 \include{P2-Main/methods}
 \include{P2-Main/results}
-\include{P3-Final/conclusion}
 \include{P3-Final/discussion}
-
+\include{P3-Final/conclusion}
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are using appendices after References
@@ -182,6 +181,7 @@
 \include{Appendix/project_structure}
 \include{Appendix/data_io}
 \include{Appendix/toolchain_integration}
+\include{Appendix/performance_benchmark}
 
 \end{appendices}
 
