--- a/thesis/Appendix/project_structure.tex
+++ b/thesis/Appendix/project_structure.tex
@@ -1,29 +1,17 @@
 \chapter{Project structure}
 \label{app:project_structure}
-Description of the project structure, what is where, reference to github etc.
+The entire project is hosted on GitHub - \url{https://github.com/Gladdy/numerical-fpga-thesis}
+
+
 
 \dirtree{%
-	.1 /.
-	.2 bin.
-	.2 home.
-	.3 jeancome.
-	.4 texmf.
-	.5 tex.
-	.6 latex.
-	.7 dirtree.
-	.3 jeancomeson.
-	.3 jeancomedaughter.
-	.2 usr.
-	.3 bin.
-	.3 games.
-	.4 fortunes.
-	.3 include.
-	.3 local.
-	.4 bin.
-	.4 share.
-	.5 texmf.
-	.6 fonts.
-	.6 metapost.
-	.6 tex.
-	.3 share.
+	.1 .
+	.2 benchmark.
+	.3 c++.
+	.3 haskell.
+	.2 clash.
+	.2 images.
+	.2 kernel.
+	.2 literature.
+	.2 sockit.
 }
