--- a/thesis/Intro/acknowledgement.tex
+++ b/thesis/Intro/acknowledgement.tex
@@ -2,11 +2,10 @@
 
 \begin{acknowledgements}      
 \begin{itemizens}
-	\item Jan Kuper	
-	\item Christiaan Baaij - making \clash{} and answering questions
-	\item Ruud van Damme
-	\item Jan Broenink
-	\item Rinse Wester - giving input on Avalon bridges
+	\item Jan Kuper	- Introducing me to functional programming, \clash{} and giving feedback
+	\item Christiaan Baaij - Creating \clash{} and answering related questions
+	\item Ruud van Damme \& Jan Broenink - Feedback
+	\item Rinse Wester - Input on configuring and using the Avalon bridges
 \end{itemizens}
 
 \end{acknowledgements}
