--- a/thesis/Intro/preamble.tex
+++ b/thesis/Intro/preamble.tex
@@ -58,6 +58,7 @@
 % ********************************** Tables ************************************
 \usepackage{booktabs} % For professional looking tables
 \usepackage{multirow}
+\usepackage{rotating}
 
 %\usepackage{multicol}
 %\usepackage{longtable}
