--- a/thesis/thesis-info.tex
+++ b/thesis/thesis-info.tex
@@ -17,8 +17,8 @@
 	Dr. R.M.J. van Damme \\ 
 	Dr.ir. J. Broenink \\ 
 	\vspace{150pt}	
-	Computer Architecture for Embedded Systems
-	Electrical Engineering, Mathematics and Computer Science (EEMCS)
+	Computer Architecture for Embedded Systems (CAES), \\
+	Electrical Engineering, Mathematics and Computer Science (EEMCS),
 }
 
 %% University and Crest
